# CPP_Raytracing

./: .clang-format  CMakeLists.txt  README.md  vcpkg.json
app/: CMakeLists.txt  camera.hpp  hittable.hpp  interval.hpp  logging.hpp  main.cpp  material.hpp  math.hpp  objects.hpp  ray.hpp
